2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Replace -pthread by -lpthread for 
	Freebsd, too.  (#475619, Roy Marples)

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: When compiling against system pcre, 
	add a private dependency to the pc file. This should
	fix static builds with system pcre.  (#475923)

	* glib-2.0.pc.in: Add a Requires.private line

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-09-14 15:07:28  Tim Janik  <timj@gtk.org>

	* glib/gutf8.c (g_utf8_strreverse): applied fix for bug #476840.

	* tests/utf8-pointer.c (test_misc): added test for g_utf8_strreverse().

2007-09-11  Marco Barisione <marco@barisione.org>

	* glib/Makefile.am:
	* configure.in: propagate the pcre flags to libglib and not to all
	parts of glib. (#475854, dmacks@netspace.org)

	* configure.in: fix a typo in the previous commit. (#475854, comment
	#4)

2007-09-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Define G_ATOMIC_ARM.

	* glib/gatomic.c: Add Arm implementation of atomic
	operations.  (#457601, Jussi Laako)

2007-09-10  Marco Barisione <marco@barisione.org>

	* glib/gregex.c: define PCRE_ERROR_NULLWSLIMIT if it's not defined by
	PCRE, has PCRE 7.3 removed this definition. (#475474)
	* configure.in: bump PCRE requirement to version 7.2.
	* glib/gregex.c: use pcre_get_stringnumber() in
	get_matched_substring_number() if G_REGEX_DUPNAMES was not set.
	(#444765, Yevgen Muntyan)
	* glib/gregex.c: change the type of ref_count from guint to gint, so
	we can remove some ugly casts.

2007-09-05  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gregex.c: Fix header inclusion. (#473879, Peter Kjellerstedt)

Wed Aug 29 12:08:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.h (g_once_init_enter): fixed compiler warning about
	loosing volatile qualifier, bug #457641.

2007-08-24  Michael Natterer  <mitch@imendio.com>

	* glib/gslice.[ch]: make g_slice_copy() take a gconstpointer